--- a/src/app/shared/bed/bed.component.scss
+++ b/src/app/shared/bed/bed.component.scss
@@ -2,9 +2,18 @@
   display: flex;
   align-items: center;
 
-  >* {
-    flex: 1 1 auto;
+  > * {
     margin: .5em;
   }
+
+  > .icon {
+    flex: 0 0 2em;
+  }
+
+  >.name {
+    flex: 1 1 10em;
+
+  }
+
 
 }
