--- a/src/app/shared/crop/crop.component.scss
+++ b/src/app/shared/crop/crop.component.scss
@@ -2,18 +2,20 @@
   display: flex;
   align-items: center;
 
-  >* {
-    flex: 1 1 auto;
+  > * {
     margin: .5em;
   }
 
-  .plant {
-    >* {
-      display: inline-block;
-      vertical-align: middle;
-    }
-    .pc-cultivar {
-      margin-left: 1em;
-    }
+  > .icon {
+    flex: 0 0 2em;
+  }
+
+  > .plant {
+    flex: 1 1 10em;
+
+  }
+
+  > .product {
+    flex: 1 1 10em;
   }
 }
