--- a/src/app/main/menu/menu.component.html
+++ b/src/app/main/menu/menu.component.html
@@ -21,6 +21,13 @@
     <pc-fields-icon></pc-fields-icon>
   </a>
 
+  <a class="cultures"
+     [routerLink]="['/cultures']"
+     routerLinkActive="active-link"
+     title="Cultures" i18n-title
+  >
+    <pc-seedlings-open-icon></pc-seedlings-open-icon>
+  </a>
 </div>
 
 <p-overlayPanel class="user-menu "
