--- a/src/app/bed/bed-filter/bed-filter.component.scss
+++ b/src/app/bed/bed-filter/bed-filter.component.scss
@@ -1,17 +1,3 @@
-.crop-filter {
-  display: flex;
-  align-items: center;
+.bed-filter {
 
-  > * {
-    display: inline-block;
-    flex: 0 0 auto;
-
-    &:not(:last-child) {
-      margin-right: 1em;
-    }
-  }
-
-  > input {
-    flex: 1 1 auto;
-  }
 }
