--- a/src/app/culture/culture-sort-select/culture-sort-select.component.html
+++ b/src/app/culture/culture-sort-select/culture-sort-select.component.html
@@ -1,4 +1,4 @@
-<span class="culture-sort-select">
+<span class="culture-sort-select pc-sort-select">
   <p-dropdown [options]="fieldOptions"
               [ngModel]="fieldValue | async"
               (ngModelChange)="onFieldChange($event)"
