--- a/src/app/main/shell/shell.component.scss
+++ b/src/app/main/shell/shell.component.scss
@@ -14,6 +14,7 @@
     flex: 1 1 auto;
     position: relative;
     margin-left: 2em;
-    margin-right: 1em;
+    padding-right: 1em;
+    overflow: auto;
   }
 }
