--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "assets/style/forms";
 @import "assets/style/taxon";
 @import "assets/style/list-page";
+@import "assets/style/sort-select";
 
 body {
   margin: 0;
