--- a/src/app/bed/bed-filter/bed-filter.component.html
+++ b/src/app/bed/bed-filter/bed-filter.component.html
@@ -1,4 +1,4 @@
-<div class="bed-filter">
+<span class="bed-filter">
   <input pInputText
          [ngModel]="searchQuery | async"
          (ngModelChange)="onQueryChanged($event)"
@@ -6,4 +6,4 @@
          placeholder="Type to search" i18n-placeholder
          autofocus
   >
-</div>
+</span>
