--- a/src/app/culture/culture-filter/culture-filter.component.scss
+++ b/src/app/culture/culture-filter/culture-filter.component.scss
@@ -1,10 +1,9 @@
 .culture-filter {
-  display: inline-flex;
-  align-items: center;
+  display: inline;
 
   > * {
-    display: inline-block;
-    flex: 0 0 auto;
+    display: inline;
+    margin: .3em;
 
     &:not(:last-child) {
       margin-right: 1em;
