--- a/src/app/shared/crop-filter/crop-filter.component.scss
+++ b/src/app/shared/crop-filter/crop-filter.component.scss
@@ -1,10 +1,9 @@
 .crop-filter {
-  display: inline-flex;
-  align-items: center;
+  display: inline;
 
   > * {
     display: inline-block;
-    flex: 0 0 auto;
+    margin: .3em;
 
     &:not(:last-child) {
       margin-right: 1em;
