--- a/src/app/shared/culture/culture.component.html
+++ b/src/app/shared/culture/culture.component.html
@@ -1,4 +1,4 @@
-<span class="bed">
+<span class="culture">
   <span class="icon" *ngIf="showIcon">
     <pc-seedlings-open-icon></pc-seedlings-open-icon>
   </span>
