--- a/src/app/main/menu/menu.component.html
+++ b/src/app/main/menu/menu.component.html
@@ -28,6 +28,17 @@
   >
     <pc-seedlings-open-icon></pc-seedlings-open-icon>
   </a>
+
+
+  <a class="timeline"
+     [routerLink]="['/timeline']"
+     routerLinkActive="active-link"
+     title="Timelines" i18n-title
+  >
+    <i class="fa fa-calendar"></i>
+  </a>
+
+
 </div>
 
 <p-overlayPanel class="user-menu "
