--- a/src/app/main/menu/menu.component.scss
+++ b/src/app/main/menu/menu.component.scss
@@ -11,6 +11,7 @@
     font-size: 2em;
     height: 2em;
     position: relative;
+    color: #999226;
 
     &:hover {
       background-color: rgba(255, 255, 0, 0.31);
