--- a/src/app/shared/crop/crop.component.html
+++ b/src/app/shared/crop/crop.component.html
@@ -3,12 +3,12 @@
     <pc-single-seedlings-icon></pc-single-seedlings-icon>
   </span>
   <span class="plant">
-    <div class="pc-taxon">{{ taxon | async }}</div>
-    <div class="pc-cultivar">{{ cultivar | async }}</div>
-  </span>
-  <span class="product" *ngIf="showProduct">
     <span class="pc-product">
       {{ productName | async }}
     </span>
+    <span class="pc-cultivar">{{ cultivar | async }}</span>
+  </span>
+  <span class="taxon" *ngIf="showTaxon">
+    <span class="pc-taxon">{{ taxon | async }}</span>
   </span>
 </div>
