--- a/src/app/shared/culture/culture.component.scss
+++ b/src/app/shared/culture/culture.component.scss
@@ -3,7 +3,7 @@
   align-items: center;
 
   >* {
-    flex: 1 1 auto;
+    flex: 1 1 10em;
     display: inline-block;
     margin: .3em;
   }
@@ -14,5 +14,13 @@
     height: 2em;
   }
 
+  .bed {
+    flex: 0 0 3em;
+
+    ::ng-deep .icon {
+      width: .9em;
+      height: .9em;
+    }
+  }
 
 }
